RAIN-1470 : PT Apk css issue fixes  (#1952)
* RAIN-1470 : PT-Mutation Apk Misalignment Issues fix

* RAIN-1470 : PT Apk Issue for Table Misalignment fix

* RAIN-1470 : PT APK issue fix for Search Preview screen

* RAIN-1470 : PT APK issue fix for PT Create acknowledgement alignment

* RAIN-1470 : PT Mutation Apply screen apk issue fix

* RAIN-1470 : PT Assess Year Popup Apk issue fix

--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-pt-dev/src/ui-config/screens/specs/pt-mutation/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-pt-dev/src/ui-config/screens/specs/pt-mutation/index.scss
@@ -100,12 +100,34 @@ div[class^="NavPills-root"] {
   }
 
   @media only screen and (max-width: 768px) {
+
+    #custom-containers-genderRadioGroup {
+      div {
+          display: inline-flex !important;
+      }
+  }
+    #custom-atoms-rightdiv {div{ div{ button{
+      padding: 4px 6px!important;
+      height: 45px !important;
+      width: 175px;
+        }
+      .pt-print-button{
+        width: 150px!important;
+      }
+      
+      
+      }}}
+        
     .pt-download-button {
-      margin-left: 5px;
+      margin-left: 3px;
       margin-right: 1px;
+      padding: 4px 3px;
+      height : 50px !important;
     }
     .pt-print-button {
-      margin-left: 4px;
+      margin-left: 3px;
+      padding: 4px 3px;
+      height : 50px !important;
     }
     div#custom-atoms-rightdiv {
       width: 100%;
